test google cse

--- a/index.html
+++ b/index.html
@@ -233,6 +233,9 @@
   </style>
 </head>
 <body>
+    <script async src="https://cse.google.com/cse.js?cx=00375fd6fbe034dab">
+    </script>
+    <div class="gcse-search"></div>  
 <h1 id="PowerShell-Commands">PowerShell Commands</h1>
 <p><img
 src="https://img.shields.io/github/languages/top/lifailon/PS-Commands"
