--- a/Linux/index.html
+++ b/Linux/index.html
@@ -4236,9 +4236,13 @@
 
   <h1>🐧 Linux</h1>
 
+<p align="center">
+    <a href="https://github.com/Lifailon/PS-Commands"><img title="PS-Commands Logo"src="Linux-Commands-Logo.png"></a>
+</p>
+
 <p>Заметки по работе с системными командами и консольными утилитами 🐧 <strong>Linux</strong>.</p>
 <h2 id="filesystem">filesystem</h2>
-<p><code>file Console-Performance.sh</code> узнать тип файла (текстовый, испоолняемый файл, архив или другой)<br />
+<p><code>file Console-Performance.sh</code> узнать тип файла (текстовый, исполняемый файл, архив или другой)<br />
 <code>stat Console-Performance.sh</code> узнать размер файла, количество блоков, занятых файлом на диске, количество жестких ссылок, права доступа и временные метки <br />
 <code>pwd</code> текущая директория<br />
 <code>ls -lh *</code> отобразить содержимое каждого подкаталога отдельно<br />
@@ -4720,7 +4724,7 @@ EOF
 <pre><code>#### # .---------------- минута (0 - 59)
 #### # |  .------------- час (0 - 23)
 #### # |  |  .---------- мень месяца (1 - 31)
-#### # |  |  |  .------- месяц (1 - 12) OR jan,feb,mar,apr...
+#### # |  |  |  .------- месяц (1 - 12) или jan,feb,mar,apr...
 #### # |  |  |  |  .---- день недели (0 - 6) (Воскресень 0 или 7) или sun,mon,tue,wed,thu,fri,sat
 #### # |  |  |  |  |
 #### # *  *  *  *  * user-name command to be executed
@@ -4890,7 +4894,7 @@ WantedBy=multi-user.target
 <code>lshw -class display</code> VGA controller<br />
 <code>lshw -class network</code><br />
 <code>lshw -class disk</code> информация о жестком диске (product, vendor, size, capabilities: 7200rpm)<br />
-`lshw | grep product</p>
+<code>lshw | grep product</code></p>
 <p><code>ls /sys/class/net</code> список сетевых интерфейсов<br />
 <code>cat /proc/net/dev</code> список сетевых интерфейсов и их статистика (bytes, packets, errs, drop) для Receive (Прием) и Transmit (Передача)<br />
 <code>ethtool -S ens33</code> статистика сетевого интерфейса (для сброса статистики нужно ip down и выгрузить модуль ядра с драйверов modprobe -r module и вернуть обратно)<br />
@@ -5234,7 +5238,13 @@ LimitNOFILESoft=1617596
 <p><code>ifconfig ens33</code> up/down<br />
 <code>ifdown -a</code> выключить все сетевые интерфейсы (пропадут из списка ifconfig) и включить (ifup -a)<br />
 <code>ifconfig ens33 192.168.3.106 netmask 255.255.255.0 broadcast 192.168.3.255</code><br />
-<code>ifconfig -s</code> netstat -i<code>список сетевых интерфейсов</code>netstat -atu<code>ALL (-a) tcp (-t) и udp (-u)</code>netstat -lntup<code>LISTEN (-l) dont resolve names (-n) и сканирует директорию /proc для вывода PID/Program name (-p)</code>arp -a<code>таблица сопоставления ip и mac адресов</code>route -e<code>отобразить таблицу маршрутизации</code>route add -net 192.168.4.0 netmask 255.255.255.0 gw 192.168.3.100<code>добавить маршрут в подсеть 192.168.4.0 через шлюз 192.168.3.100</code>route del -net 192.168.4.0 netmask 255.255.255.0` удалить маршрут</p>
+<code>ifconfig -s || netstat -i</code> список сетевых интерфейсов<br />
+<code>netstat -atu</code> ALL (-a) tcp (-t) и udp (-u)<br />
+<code>netstat -lntup</code> LISTEN (-l) dont resolve names (-n) и сканирует директорию /proc для вывода PID/Program name (-p)<br />
+<code>arp -a</code> таблица сопоставления ip и mac адресов<br />
+<code>route -e</code> отобразить таблицу маршрутизации<br />
+<code>route add -net 192.168.4.0 netmask 255.255.255.0 gw 192.168.3.100</code> добавить маршрут в подсеть 192.168.4.0 через шлюз 192.168.3.100<br />
+<code>route del -net 192.168.4.0 netmask 255.255.255.0</code> удалить маршрут</p>
 <h3 id="networkd">networkd</h3>
 <p><code>systemctl status systemd-networkd</code><br />
 <code>networkctl list</code> список всех адаптеров, тип и состояния<br />
@@ -5270,11 +5280,12 @@ LimitNOFILESoft=1617596
 <code>systemctl status systemd-resolved</code> статус службы и его лог<br />
 <code>cat /run/systemd/resolve/stub-resolv.conf</code> файл-заглушка для демона systemd-resolved, по умолчанию nameserver 127.0.0.53, который перенаправляет обращения к локальному DNS серверу, а он, в свою очередь уже получает информацию от других серверов в интернете</p>
 <p><code>nano /etc/systemd/resolved.conf</code> конфигурационный файл, отвечающий за настройку DNS-серверов</p>
+<p>Включить кэширование:</p>
 <pre><code>[Resolve]
 DNS=8.8.8.8, 192.168.3.101
-Cache=yes` включить кэширование
+Cache=yes
 </code></pre>
-<p><code>ln -svi /run/systemd/resolve/resolv.conf /etc/resolv.conf</code> создать симлинк для совместимости с приложениями, которые не используют библиотечные вызовы, а обращаются к DNS серверам напрямую, получая их из /etc/resolv.conf<br />
+<p><code>ln -svi /run/systemd/resolve/resolv.conf /etc/resolv.conf</code> создать симлинк для совместимости с приложениями, которые не используют библиотечные вызовы, а обращаются к DNS серверам напрямую, получая их из <code>/etc/resolv.conf</code><br />
 <code>ls -la /etc/resolv.conf</code></p>
 <p><code>nano /etc/resolv.conf</code> не управляется напрямую службой systemd-resolved, а иногда с помощью использования initscripts или NetworkManager, и любые пользовательские изменения могут быть изменены через время или после перезагрузки</p>
 <pre><code>nameserver 8.8.8.8
